Implement feature transformations, handle duplicates, manage missing values, and detect outliers
- Added FeatureTransformer class for applying mathematical transformations (log, sqrt) with options to drop original columns.
- Introduced DuplicateHandler class to detect and remove exact duplicates from DataFrames.
- Created MissingHandler class to handle missing values with separate strategies for numeric and categorical data, caching imputation values.
- Developed OutlierHandler class to flag outliers using the IQR method without removing them, allowing for outlier detection across training and validation datasets.

--- a/config/preprocessing_config.yaml
+++ b/config/preprocessing_config.yaml
@@ -69,7 +69,7 @@ duplicates:
 
 encoding:
   one_hot_columns: true
-
+  ignore_columns: 'Employee_name' 
 
 transformations:
   log_columns: ['Employee_age', "past_projects", 'years_experience', 'Job_Satisfaction', "Work_Life_Balance", "Current_Salary"]
