--- a/config/preprocessing_config.yaml
+++ b/config/preprocessing_config.yaml
@@ -73,8 +73,7 @@ encoding:
 
 transformations:
   log_columns: ['Employee_age', "past_projects", 'years_experience', 'Job_Satisfaction', "Work_Life_Balance", "Current_Salary"]
-  drop_original: false
-
+  drop_original: true
 output:
   processed_dir: 'data/processed'
   pipeline_file: 'artifacts/data/preprocessing_pipeline.joblib'
