--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,8 @@ dependencies = [
     "seaborn>=0.13.2",
     "shap",
     "xgboost>=3.1.2",
+    "fastapi",
+    "uvicorn[standard]",
+    "streamlit",
+    "pytest",
 ]
